# Implementism

./: .gitignore  11279.cpp  1181.cpp  CMakeLists.txt  magic_watering.cpp  sample_input.txt  template.cpp  test.cpp  test.py
BOJ/: 1517-seg.cpp  1517.cpp  1948.cpp  20188.cpp  2042.cpp  2357.cpp  2533.cpp  3020.cpp
SWEA/: 1953.cpp  1974.cpp  2115.cpp  2383.cpp  2477.cpp  3234.cpp  4012.cpp  4013.cpp  4014.cpp  5215.cpp  5644.cpp  5658.cpp
SWEA_B/26113/: main.cpp  sample_input.txt  solution.cpp
mincoding/: 127.cpp  1647.cpp  18460.cpp  18462.cpp  18464.cpp  18465.cpp  18467.cpp  18471.cpp  18476.cpp  223.cpp  2374.cpp  2391.cpp  249.cpp  273.cpp  279.cpp  4381.cpp  4454.cpp  4503.cpp  4511.cpp  4562.cpp  4564.cpp  magic_watering.cpp
mincoding_red/: 18461.cpp  18462.cpp  18463.cpp  18465.cpp  18466.cpp  18468.cpp  18469.cpp  18470.cpp  18472.cpp  18473.cpp  18474.cpp  18475.cpp  18478.cpp  18576.cpp
